Lab1/mixed_approach/mixed_approach.sdk/.metadata/.plugins/org.eclipse.cdt.ui/mixed_approach.build.log
21:18:22 **** Auto Build of configuration Debug for project mixed_approach ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/lab1_mixed_approach.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/lab1_mixed_approach.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../mixed_approach_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/lab1_mixed_approach.d" -MT"src/lab1_mixed_approach.o" -o "src/lab1_mixed_approach.o" "../src/lab1_mixed_approach.c"
../src/lab1_mixed_approach.c: In function 'main':
../src/lab1_mixed_approach.c:36:26: error: 'XPAR_XPOS_DEVICE_ID' undeclared (first use in this function)
  XGpio_Initialize(&xpos, XPAR_XPOS_DEVICE_ID);
                          ^~~~~~~~~~~~~~~~~~~
../src/lab1_mixed_approach.c:36:26: note: each undeclared identifier is reported only once for each function it appears in
src/subdir.mk:21: recipe for target 'src/lab1_mixed_approach.o' failed
make: *** [src/lab1_mixed_approach.o] Error 1

21:18:22 Build Finished (took 621ms)

